--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,19 +11,25 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/SmartGlass">
         <activity
             android:name=".WSMDSelectionActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_wsmdselection"
-            android:theme="@style/FullscreenTheme">
+            android:theme="@style/FullscreenSmart">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SelectionActivity" />
-        <activity android:name=".OMSDisplayActivity" />
+        <activity
+            android:name=".SelectionActivity"
+            android:theme="@style/FullscreenSmart">
+        </activity>
+        <activity
+            android:name=".OMSDisplayActivity"
+            android:theme="@style/FullscreenSmart">
+        </activity>
     </application>
 
 </manifest>
