--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,14 +20,22 @@ android {
     }
 }
 
+
 dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:support-v4:24.2.1'
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
     compile 'me.dm7.barcodescanner:zxing:1.9'
+    implementation files('libs/volley.jar')
+
+    compile 'com.squareup.retrofit2:retrofit:2.4.0'
+
+    // JSON Parsing
+    compile 'com.google.code.gson:gson:2.8.2'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
 }
