--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         <activity
             android:name=".OMSDisplayActivity"
             android:theme="@style/FullscreenSmart" />
-        <activity android:name=".PreferenceActivityCustom"></activity>
+        <activity android:name=".PreferenceActivityCustom"
+            android:theme="@style/PreferenceSmart"></activity>
     </application>
 
 </manifest>
