--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,10 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.1.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,6 +18,7 @@ allprojects {
     ant.condition(property:"os", value:"unix"){os(family:"unix")}
     repositories {
         jcenter()
+        google()
     }
     gradle.projectsEvaluated {
         tasks.withType(JavaCompile) {
